// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Loader> matches snapshot 1`] = `
<div>
  <div
    class="loading-containerloader css-18jy0x5-container-container"
    data-testid="loader"
    id="main-loader"
  >
    <span
      class="loader-wrapper"
      style="display: inherit;"
    >
      <span
        style="background-color: rgb(116, 176, 234); width: 0.75rem; height: 0.75rem; margin: 0.625rem; border-radius: 100%; display: inline-block; animation: react-spinners-PulseLoader-pulse 0.75s 0.12s infinite cubic-bezier(0.2, 0.68, 0.18, 1.08); animation-fill-mode: both;"
      />
      <span
        style="background-color: rgb(116, 176, 234); width: 0.75rem; height: 0.75rem; margin: 0.625rem; border-radius: 100%; display: inline-block; animation: react-spinners-PulseLoader-pulse 0.75s 0.24s infinite cubic-bezier(0.2, 0.68, 0.18, 1.08); animation-fill-mode: both;"
      />
      <span
        style="background-color: rgb(116, 176, 234); width: 0.75rem; height: 0.75rem; margin: 0.625rem; border-radius: 100%; display: inline-block; animation: react-spinners-PulseLoader-pulse 0.75s 0.36s infinite cubic-bezier(0.2, 0.68, 0.18, 1.08); animation-fill-mode: both;"
      />
    </span>
  </div>
</div>
`;

exports[`<Loader> matches snapshot with fullscreen 1`] = `
<div>
  <div
    class="loading-container css-vss7sp-container-container"
    data-testid="loader"
  >
    <span
      class="loader-wrapper"
      style="display: inherit;"
    >
      <span
        style="background-color: rgb(116, 176, 234); width: 0.75rem; height: 0.75rem; margin: 0.625rem; border-radius: 100%; display: inline-block; animation: react-spinners-PulseLoader-pulse 0.75s 0.12s infinite cubic-bezier(0.2, 0.68, 0.18, 1.08); animation-fill-mode: both;"
      />
      <span
        style="background-color: rgb(116, 176, 234); width: 0.75rem; height: 0.75rem; margin: 0.625rem; border-radius: 100%; display: inline-block; animation: react-spinners-PulseLoader-pulse 0.75s 0.24s infinite cubic-bezier(0.2, 0.68, 0.18, 1.08); animation-fill-mode: both;"
      />
      <span
        style="background-color: rgb(116, 176, 234); width: 0.75rem; height: 0.75rem; margin: 0.625rem; border-radius: 100%; display: inline-block; animation: react-spinners-PulseLoader-pulse 0.75s 0.36s infinite cubic-bezier(0.2, 0.68, 0.18, 1.08); animation-fill-mode: both;"
      />
    </span>
  </div>
</div>
`;
